================================================================================
This file describes changes made to the PTCLM tool
================================================================================        
Originator: erik
Date: Jan/30/2013
Tag: PTCLM1_130130
cesm_baseline:  scripts4_130130
One-line:  Initial changes to get PTCLM working with new scripts and tools
Testing: Limited testing

Initial add of yellowstone to testcases and switch frankfurt for edinburgh.
Remove generic stuff for userdefined. Remove ndep/aer grid.

M       PTCLM.py
M       testcases.csh
D       usr_files/mkdatadomain.TEMPLATE

================================================================================        
Originator: erik
Date: Jan/11/2013
Tag: PTCLM1_130111
cesm_baseline:  scripts4_120125
One-line:  Add some new sitedata from Keith Oleson
Testing: none

A       PTCLM_sitedata/LBA_pftdata.txt
M       PTCLM_sitedata/Fluxnet-Canada_sitedata.txt
M       PTCLM_sitedata/EXAMPLE_sitedata.txt
A       PTCLM_sitedata/CarboEurope_pftdata.txt
M       PTCLM_sitedata/AmeriFlux_sitedata.txt
M       PTCLM_sitedata/Fluxnet-Canada_soildata.txt
M       PTCLM_sitedata/EXAMPLE_soildata.txt
M       PTCLM_sitedata/AmeriFlux_soildata.txt
A       PTCLM_sitedata/LBA_sitedata.txt
A       PTCLM_sitedata/LBA_soildata.txt
A       PTCLM_sitedata/CarboEurope_sitedata.txt
A       PTCLM_sitedata/CarboEurope_soildata.txt
M       PTCLM_sitedata/Fluxnet-Canada_pftdata.txt
M       PTCLM_sitedata/EXAMPLE_pftdata.txt
M       PTCLM_sitedata/AmeriFlux_pftdata.txt
	
================================================================================        
Originator: mvertens
Date: Jan/25/2012
Tag: PTCLM1_120125
cesm_baseline:  scripts4_120125
One-line:  Remove USE_MPISERIAL replace with MPILIB


================================================================================        
	
Originator: erik
Date: Nov/29/2011
Tag: PTCLM1_111129
cesm_baseline: clm4_0_39 / scripts4_111129